adjust about text; change vmImage to ubuntu;

--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -71,7 +71,7 @@
     "card_openOriginalWebSite": "Открыть оригинальнвй сайт",
     "card_ResultImagesFrom": "Изображение с ресурса",
     "card_ImgDate": "Дата фотографии",
-    "about_1_app": "Это приложение предоставляет данные транспортных средств наичная с января 2013 года.",
+    "about_1_app": "Это приложение предоставляет данные транспортных средств начиная с января 2013 года.",
     "about_2_mvd": "Сведения о транспортных средствах и их собственников взяты из единого государственного веб-портала открытых данных https://data.gov.ua, которым руководит Министерство внутренних дел Украины.",
     "about_3_kabMin": "Единый государственный веб-портал открытых данных создан по требованию Закона Украины «О доступе к публичной информации» и постановления Кабинета министров Украины от 21 октября 2015 года. № 835 «Об утверждении Положения о наборах данных, которые подлежат обнародованию в форме открытых данных».",
     "about_4_portal": "Портал предназначен для Предоставление доступа к публичной информации в форме открытых данных и предполагает доступ к информации ОРГАНОВ власти с возможностью ее следующего использования.",
