add local vin; disable sound

--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -1,85 +1,83 @@
 {
-    "lang_locale": "en",
-    "lang_display": "English",
-    "searchInputPlaceholderText": "Enter plate or VIN",
-    "dashBoradTitle": "Cars UA",
-    "copyright": "Copyright © ",
-    "documentTitle": "Car plate UA",
-    "noResultMessage": "Sorry, there are no results",
-    "login": "Login",
-    "logout": "Logout",
-    "login_google": "Login with Google",
-    "login_facebook": "Login with Facebook",
-    "loggedInText": "You are logged in using",
-    "login_sync_text": "Please login to sync your favorites with cloud",
-    "logined_sync_text": "Favorites are synced with cloud",
-    "syncManually": "Manually Sync data",
-    "rowKey": "Car plate",
-    "brand": "Brand",
-    "model": "Model",
-    "modelBrand": "Brand",
-    "make_year": "Year",
-    "body": "Body",
-    "capacity": "Engine capacity",
-    "color": "Color",
-    "own_weight": "Own weight",
-    "total_weight": "Total weight",
-    "weight": "Own weight/Total weight",
-    "fuel": "Fuel",
-    "kind": "Type",
-    "purpose": "Car purpose",
-    "oper_code": "Vehicle registration code",
-    "oper_name": "Vehicle registration",
-    "person": "Owner",
-    "person_private": "Private entity",
-    "person_company": "Legal entity",
-    "d_reg": "Registration date",
-    "dep": "Police department",
-    "dep_code": "Police department code",
-    "reg_addr_koatuu": "KOATUU registration address",
-    "region": "Region",
-    "cameraActions": [
-        "Take a picture",
-        "Attach image"
-    ],
-    "imgRecognizingMessage": "Image is recognizing, please wait",
-    "details": "Details",
-    "race": "Race",
-    "gearbox": "Gearbox",
-    "phone": "Phone",
-    "messageChooseImage": "Please choose image file!",
-    "messageImageLimit": "File should be less then 5 MB!",
-    "messageTurnOnCamera": "Please turn on the camera or give access to use camera!",
-    "messageTurnOnFrontCamera": "Choose Camera",
-    "messageMaxFavsLimit": "You can follow 50 cars maximum!",
-    "url_search": "Search",
-    "url_favs": "Favorites",
-    "url_notifications": "Notifications",
-    "url_about": "About",
-    "url_profile": "Profile",
-    "url_lang": "Language",
-    "url_disqus": "Disqus",
-    "url_store": "Store",
-    "url_install": "Install App",
-    "card_settings": "Settings",
-    "card_addToFavs": "Add to Favorites",
-    "card_removeFromToFavs": "Remove from Favorites",
-    "card_share": "Share",
-    "card_showMore": "Show more",
-    "card_openOriginalAds": "Open original ads",
-    "card_openOriginalImage": "Open original image",
-    "card_openOriginalWebSite": "Open original web site",
-    "card_ResultImagesFrom": "Result images from",
-    "card_ImgDate": "Image date",
-    "about_1_app": "This app provides vehicle data since in January 2013.",
-    "about_2_mvd": "The information about the vehicles and their owners is taken from the single state open data portal https://data.gov.ua, managed by the Ministry of Internal Affairs of Ukraine.",
-    "about_3_kabMin": "The only state open data portal was created at the request of the Law of Ukraine “On Access to Public Information” and the Decree of the Cabinet of Ministers of Ukraine of October 21, 2015 No. 835 “On Approval of the Regulations on Data Sets to be Disclosed in the Form of Open Data”.",
-    "about_4_portal": "The portal is intended to provide access to public information in the form of open data and provides access to information by authorities with the possibility of its subsequent use.",
-    "about_5_sharing": "Anyone may freely copy, publish, distribute, use, including for commercial purposes, in combination with other information or by incorporating their own product, public information in the form of open data, with a mandatory link to the source of such information.",
-    "about_6_mit": "MIT License",
-    "about_7_mit_1": "Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the 'Software'), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:",
-    "about_8_mit_2": "The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.",
-    "about_9_mit_3": "THE SOFTWARE IS PROVIDED 'AS IS', WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.",
-    "policy_url": "Website Privacy Policy",
-    "update_available": "Update available! Click here to get the new version."
+  "lang_locale": "en",
+  "lang_display": "English",
+  "searchInputPlaceholderText": "Enter plate or VIN",
+  "dashBoradTitle": "Cars UA",
+  "copyright": "Copyright © ",
+  "documentTitle": "Car plate UA",
+  "noResultMessage": "Sorry, there are no results",
+  "login": "Login",
+  "logout": "Logout",
+  "login_google": "Login with Google",
+  "login_facebook": "Login with Facebook",
+  "loggedInText": "You are logged in using",
+  "login_sync_text": "Please login to sync your favorites with cloud",
+  "logined_sync_text": "Favorites are synced with cloud",
+  "syncManually": "Manually Sync data",
+  "rowKey": "Car plate",
+  "brand": "Brand",
+  "model": "Model",
+  "modelBrand": "Brand",
+  "make_year": "Year",
+  "body": "Body",
+  "capacity": "Engine capacity",
+  "color": "Color",
+  "own_weight": "Own weight",
+  "total_weight": "Total weight",
+  "weight": "Own weight/Total weight",
+  "fuel": "Fuel",
+  "kind": "Type",
+  "purpose": "Car purpose",
+  "oper_code": "Vehicle registration code",
+  "oper_name": "Vehicle registration",
+  "person": "Owner",
+  "person_private": "Private entity",
+  "person_company": "Legal entity",
+  "d_reg": "Registration date",
+  "dep": "Police department",
+  "dep_code": "Police department code",
+  "reg_addr_koatuu": "KOATUU registration address",
+  "vin": "VIN",
+  "region": "Region",
+  "cameraActions": ["Take a picture", "Attach image"],
+  "imgRecognizingMessage": "Image is recognizing, please wait",
+  "details": "Details",
+  "race": "Race",
+  "gearbox": "Gearbox",
+  "phone": "Phone",
+  "messageChooseImage": "Please choose image file!",
+  "messageImageLimit": "File should be less then 5 MB!",
+  "messageTurnOnCamera": "Please turn on the camera or give access to use camera!",
+  "messageTurnOnFrontCamera": "Choose Camera",
+  "messageMaxFavsLimit": "You can follow 50 cars maximum!",
+  "url_search": "Search",
+  "url_favs": "Favorites",
+  "url_notifications": "Notifications",
+  "url_about": "About",
+  "url_profile": "Profile",
+  "url_lang": "Language",
+  "url_disqus": "Disqus",
+  "url_store": "Store",
+  "url_install": "Install App",
+  "card_settings": "Settings",
+  "card_addToFavs": "Add to Favorites",
+  "card_removeFromToFavs": "Remove from Favorites",
+  "card_share": "Share",
+  "card_showMore": "Show more",
+  "card_openOriginalAds": "Open original ads",
+  "card_openOriginalImage": "Open original image",
+  "card_openOriginalWebSite": "Open original web site",
+  "card_ResultImagesFrom": "Result images from",
+  "card_ImgDate": "Image date",
+  "about_1_app": "This app provides vehicle data since in January 2013.",
+  "about_2_mvd": "The information about the vehicles and their owners is taken from the single state open data portal https://data.gov.ua, managed by the Ministry of Internal Affairs of Ukraine.",
+  "about_3_kabMin": "The only state open data portal was created at the request of the Law of Ukraine “On Access to Public Information” and the Decree of the Cabinet of Ministers of Ukraine of October 21, 2015 No. 835 “On Approval of the Regulations on Data Sets to be Disclosed in the Form of Open Data”.",
+  "about_4_portal": "The portal is intended to provide access to public information in the form of open data and provides access to information by authorities with the possibility of its subsequent use.",
+  "about_5_sharing": "Anyone may freely copy, publish, distribute, use, including for commercial purposes, in combination with other information or by incorporating their own product, public information in the form of open data, with a mandatory link to the source of such information.",
+  "about_6_mit": "MIT License",
+  "about_7_mit_1": "Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the 'Software'), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:",
+  "about_8_mit_2": "The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.",
+  "about_9_mit_3": "THE SOFTWARE IS PROVIDED 'AS IS', WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.",
+  "policy_url": "Website Privacy Policy",
+  "update_available": "Update available! Click here to get the new version."
 }
