--- a/src/i18n/ru.json
+++ b/src/i18n/ru.json
@@ -1,85 +1,83 @@
 {
-    "lang_locale": "Русский",
-    "lang_display": "ru",
-    "searchInputPlaceholderText": "Введите номер или VIN",
-    "dashBoradTitle": "Авто UA",
-    "copyright": "Авторские права © ",
-    "documentTitle": "Автомобили Украины",
-    "noResultMessage": "Сорян, результатов нет",
-    "login": "Войти",
-    "logout": "Выйти",
-    "login_google": "Войти через Google",
-    "login_facebook": "Войти через Facebook",
-    "loggedInText": "Вы зашли через",
-    "login_sync_text": "Войдите, чтобы избранное синхронизировалось с облаком",
-    "logined_sync_text": "Избранное синхронизировано с облаком",
-    "syncManually": "Синхронизировать данные вручную",
-    "rowKey": "Номер авто",
-    "brand": "Бренд",
-    "model": "Модель",
-    "modelBrand": "Бренд",
-    "make_year": "Год",
-    "body": "Кузов",
-    "capacity": "Объем двигателя",
-    "color": "Цвет",
-    "own_weight": "Собственный вес",
-    "total_weight": "Общий вес",
-    "weight": "Собственный/Общий вес",
-    "fuel": "Топливо",
-    "kind": "Тип авто",
-    "purpose": "Назначение машины",
-    "person": "Собственник",
-    "person_private": "Приватное лицо",
-    "person_company": "Юридическое лицо",
-    "d_reg": "Дата Регистрации",
-    "dep": "Сервисный центр МВД",
-    "dep_code": "Сервисный центр МВД (код)",
-    "oper_code": "Регистрация транспортного средства (код)",
-    "oper_name": "Регистрация транспортного средства",
-    "reg_addr_koatuu": "Адрес регистрации КОАТУУ",
-    "region": "Регион",
-    "cameraActions": [
-        "Сфотографировать",
-        "Добавить фотографию"
-    ],
-    "imgRecognizingMessage": "Изображение распознается, подождите",
-    "messageTurnOnCamera": "Пожалуйста, включите камеру или предоставьте камере права!",
-    "messageTurnOnFrontCamera": "Выберите камеру",
-    "details": "Характеристики",
-    "race": "Пробег",
-    "gearbox": "Коробка передач",
-    "phone": "Мобильний",
-    "messageChooseImage": "Виберите изображение!",
-    "messageImageLimit": "Файл должен быть менше 5 Мб!",
-    "messageMaxFavsLimit": "Вы можете добавлять максимум 50 авто!",
-    "url_search": "Поиск",
-    "url_favs": "Избранное",
-    "url_notifications": "Уведомления",
-    "url_about": "Про приложение",
-    "url_profile": "Профиль",
-    "url_lang": "Язык",
-    "url_disqus": "Обсудить",
-    "url_store": "Магазин",
-    "url_install": "Установить",
-    "card_settings": "Настройки",
-    "card_addToFavs": "Добавить в избранное",
-    "card_removeFromToFavs": "Убрать из избранного",
-    "card_share": "Поделится",
-    "card_showMore": "Показать больше",
-    "card_openOriginalAds": "Открыть оригинальное объявление",
-    "card_openOriginalImage": "Открыть оригинальное изображение",
-    "card_openOriginalWebSite": "Открыть оригинальнвй сайт",
-    "card_ResultImagesFrom": "Изображение с ресурса",
-    "card_ImgDate": "Дата фотографии",
-    "about_1_app": "Это приложение предоставляет данные транспортных средств начиная с января 2013 года.",
-    "about_2_mvd": "Сведения о транспортных средствах и их собственников взяты из единого государственного веб-портала открытых данных https://data.gov.ua, которым руководит Министерство внутренних дел Украины.",
-    "about_3_kabMin": "Единый государственный веб-портал открытых данных создан по требованию Закона Украины «О доступе к публичной информации» и постановления Кабинета министров Украины от 21 октября 2015 года. № 835 «Об утверждении Положения о наборах данных, которые подлежат обнародованию в форме открытых данных».",
-    "about_4_portal": "Портал предназначен для Предоставление доступа к публичной информации в форме открытых данных и предполагает доступ к информации ОРГАНОВ власти с возможностью ее следующего использования.",
-    "about_5_sharing": "Любое лицо может свободно копировать, публиковать, распространять, использовать, в том числе в коммерческих целях, в сочетании с другой информацией или Путем включения в состав собственного продукта, публичной информации в форме открытых данных с обязательным ссылку на агентство источник Получение такой информации.",
-    "about_6_mit": "MIT лицензия",
-    "about_7_mit_1": "Данная лицензия разрешает лицам, получившим копию данного программного обеспечения и сопутствующей документации (в дальнейшем именуемыми «Программное обеспечение»), безвозмездно использовать Программное обеспечение без ограничений, включая неограниченное право на использование, копирование, изменение, слияние, публикацию, распространение, сублицензирование и/или продажу копий Программного обеспечения, а также лицам, которым предоставляется данное Программное обеспечение, при соблюдении следующих условий:",
-    "about_8_mit_2": "Указанное выше уведомление об авторском праве и данные условия должны быть включены во все копии или значимые части данного Программного обеспечения.",
-    "about_9_mit_3": "ДАННОЕ ПРОГРАММНОЕ ОБЕСПЕЧЕНИЕ ПРЕДОСТАВЛЯЕТСЯ «КАК ЕСТЬ», БЕЗ КАКИХ-ЛИБО ГАРАНТИЙ, ЯВНО ВЫРАЖЕННЫХ ИЛИ ПОДРАЗУМЕВАЕМЫХ, ВКЛЮЧАЯ ГАРАНТИИ ТОВАРНОЙ ПРИГОДНОСТИ, СООТВЕТСТВИЯ ПО ЕГО КОНКРЕТНОМУ НАЗНАЧЕНИЮ И ОТСУТСТВИЯ НАРУШЕНИЙ, НО НЕ ОГРАНИЧИВАЯСЬ ИМИ. НИ В КАКОМ СЛУЧАЕ АВТОРЫ ИЛИ ПРАВООБЛАДАТЕЛИ НЕ НЕСУТ ОТВЕТСТВЕННОСТИ ПО КАКИМ-ЛИБО ИСКАМ, ЗА УЩЕРБ ИЛИ ПО ИНЫМ ТРЕБОВАНИЯМ, В ТОМ ЧИСЛЕ, ПРИ ДЕЙСТВИИ КОНТРАКТА, ДЕЛИКТЕ ИЛИ ИНОЙ СИТУАЦИИ, ВОЗНИКШИМ ИЗ-ЗА ИСПОЛЬЗОВАНИЯ ПРОГРАММНОГО ОБЕСПЕЧЕНИЯ ИЛИ ИНЫХ ДЕЙСТВИЙ С ПРОГРАММНЫМ ОБЕСПЕЧЕНИЕМ.",
-    "policy_url": "Политика Конфиденциальности сайта",
-    "update_available": "Доступно обновление! Нажмите здесь, чтобы получить новую версию."
+  "lang_locale": "Русский",
+  "lang_display": "ru",
+  "searchInputPlaceholderText": "Введите номер или VIN",
+  "dashBoradTitle": "Авто UA",
+  "copyright": "Авторские права © ",
+  "documentTitle": "Автомобили Украины",
+  "noResultMessage": "Сорян, результатов нет",
+  "login": "Войти",
+  "logout": "Выйти",
+  "login_google": "Войти через Google",
+  "login_facebook": "Войти через Facebook",
+  "loggedInText": "Вы зашли через",
+  "login_sync_text": "Войдите, чтобы избранное синхронизировалось с облаком",
+  "logined_sync_text": "Избранное синхронизировано с облаком",
+  "syncManually": "Синхронизировать данные вручную",
+  "rowKey": "Номер авто",
+  "brand": "Бренд",
+  "model": "Модель",
+  "modelBrand": "Бренд",
+  "make_year": "Год",
+  "body": "Кузов",
+  "capacity": "Объем двигателя",
+  "color": "Цвет",
+  "own_weight": "Собственный вес",
+  "total_weight": "Общий вес",
+  "weight": "Собственный/Общий вес",
+  "fuel": "Топливо",
+  "kind": "Тип авто",
+  "purpose": "Назначение машины",
+  "person": "Собственник",
+  "person_private": "Приватное лицо",
+  "person_company": "Юридическое лицо",
+  "d_reg": "Дата Регистрации",
+  "dep": "Сервисный центр МВД",
+  "dep_code": "Сервисный центр МВД (код)",
+  "oper_code": "Регистрация транспортного средства (код)",
+  "oper_name": "Регистрация транспортного средства",
+  "reg_addr_koatuu": "Адрес регистрации КОАТУУ",
+  "vin": "VIN-код",
+  "region": "Регион",
+  "cameraActions": ["Сфотографировать", "Добавить фотографию"],
+  "imgRecognizingMessage": "Изображение распознается, подождите",
+  "messageTurnOnCamera": "Пожалуйста, включите камеру или предоставьте камере права!",
+  "messageTurnOnFrontCamera": "Выберите камеру",
+  "details": "Характеристики",
+  "race": "Пробег",
+  "gearbox": "Коробка передач",
+  "phone": "Мобильний",
+  "messageChooseImage": "Виберите изображение!",
+  "messageImageLimit": "Файл должен быть менше 5 Мб!",
+  "messageMaxFavsLimit": "Вы можете добавлять максимум 50 авто!",
+  "url_search": "Поиск",
+  "url_favs": "Избранное",
+  "url_notifications": "Уведомления",
+  "url_about": "Про приложение",
+  "url_profile": "Профиль",
+  "url_lang": "Язык",
+  "url_disqus": "Обсудить",
+  "url_store": "Магазин",
+  "url_install": "Установить",
+  "card_settings": "Настройки",
+  "card_addToFavs": "Добавить в избранное",
+  "card_removeFromToFavs": "Убрать из избранного",
+  "card_share": "Поделится",
+  "card_showMore": "Показать больше",
+  "card_openOriginalAds": "Открыть оригинальное объявление",
+  "card_openOriginalImage": "Открыть оригинальное изображение",
+  "card_openOriginalWebSite": "Открыть оригинальнвй сайт",
+  "card_ResultImagesFrom": "Изображение с ресурса",
+  "card_ImgDate": "Дата фотографии",
+  "about_1_app": "Это приложение предоставляет данные транспортных средств начиная с января 2013 года.",
+  "about_2_mvd": "Сведения о транспортных средствах и их собственников взяты из единого государственного веб-портала открытых данных https://data.gov.ua, которым руководит Министерство внутренних дел Украины.",
+  "about_3_kabMin": "Единый государственный веб-портал открытых данных создан по требованию Закона Украины «О доступе к публичной информации» и постановления Кабинета министров Украины от 21 октября 2015 года. № 835 «Об утверждении Положения о наборах данных, которые подлежат обнародованию в форме открытых данных».",
+  "about_4_portal": "Портал предназначен для Предоставление доступа к публичной информации в форме открытых данных и предполагает доступ к информации ОРГАНОВ власти с возможностью ее следующего использования.",
+  "about_5_sharing": "Любое лицо может свободно копировать, публиковать, распространять, использовать, в том числе в коммерческих целях, в сочетании с другой информацией или Путем включения в состав собственного продукта, публичной информации в форме открытых данных с обязательным ссылку на агентство источник Получение такой информации.",
+  "about_6_mit": "MIT лицензия",
+  "about_7_mit_1": "Данная лицензия разрешает лицам, получившим копию данного программного обеспечения и сопутствующей документации (в дальнейшем именуемыми «Программное обеспечение»), безвозмездно использовать Программное обеспечение без ограничений, включая неограниченное право на использование, копирование, изменение, слияние, публикацию, распространение, сублицензирование и/или продажу копий Программного обеспечения, а также лицам, которым предоставляется данное Программное обеспечение, при соблюдении следующих условий:",
+  "about_8_mit_2": "Указанное выше уведомление об авторском праве и данные условия должны быть включены во все копии или значимые части данного Программного обеспечения.",
+  "about_9_mit_3": "ДАННОЕ ПРОГРАММНОЕ ОБЕСПЕЧЕНИЕ ПРЕДОСТАВЛЯЕТСЯ «КАК ЕСТЬ», БЕЗ КАКИХ-ЛИБО ГАРАНТИЙ, ЯВНО ВЫРАЖЕННЫХ ИЛИ ПОДРАЗУМЕВАЕМЫХ, ВКЛЮЧАЯ ГАРАНТИИ ТОВАРНОЙ ПРИГОДНОСТИ, СООТВЕТСТВИЯ ПО ЕГО КОНКРЕТНОМУ НАЗНАЧЕНИЮ И ОТСУТСТВИЯ НАРУШЕНИЙ, НО НЕ ОГРАНИЧИВАЯСЬ ИМИ. НИ В КАКОМ СЛУЧАЕ АВТОРЫ ИЛИ ПРАВООБЛАДАТЕЛИ НЕ НЕСУТ ОТВЕТСТВЕННОСТИ ПО КАКИМ-ЛИБО ИСКАМ, ЗА УЩЕРБ ИЛИ ПО ИНЫМ ТРЕБОВАНИЯМ, В ТОМ ЧИСЛЕ, ПРИ ДЕЙСТВИИ КОНТРАКТА, ДЕЛИКТЕ ИЛИ ИНОЙ СИТУАЦИИ, ВОЗНИКШИМ ИЗ-ЗА ИСПОЛЬЗОВАНИЯ ПРОГРАММНОГО ОБЕСПЕЧЕНИЯ ИЛИ ИНЫХ ДЕЙСТВИЙ С ПРОГРАММНЫМ ОБЕСПЕЧЕНИЕМ.",
+  "policy_url": "Политика Конфиденциальности сайта",
+  "update_available": "Доступно обновление! Нажмите здесь, чтобы получить новую версию."
 }
